--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="title_bg">#ed314a</color>
     <color name="page_bg">#eeeeee</color>
     <color name="font_9">#999999</color>
+    <color name="font_blue_5">#528fdb</color>
     <!-- 自定义的颜色值end -->
 
 
