主页面，子fragment页面基本布局

--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -98,6 +98,7 @@
         android:layout_marginTop="40dp"/>
 
     <LinearLayout
+        android:id="@+id/xieyi_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
