--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="page_bg">#eeeeee</color>
     <color name="font_9">#999999</color>
     <color name="font_blue_5">#528fdb</color>
+    <color name="font_lose_c">#cccccc</color>
     <!-- 自定义的颜色值end -->
 
 
