--- a/app/src/main/res/layout/my_order.xml
+++ b/app/src/main/res/layout/my_order.xml
@@ -2,6 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="@color/page_bg">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+        
+        <TextView
+            android:id="@+id/my_loan_financing"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/my_order_liCai"
+            android:textSize="16sp"
+            android:gravity="center_horizontal|center_vertical"
+            android:layout_marginRight="1dp"
+            android:background="@color/white"
+            android:textColor="@color/title_bg"/>
+
+        <TextView
+            android:id="@+id/my_loan_order"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/my_order_daiKuan"
+            android:textSize="16sp"
+            android:gravity="center_horizontal|center_vertical"
+            android:background="@color/white"
+            android:textColor="@color/font_3"/>
+    </LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/fragmentPager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1.0"
+        android:flipInterval="30"
+        android:persistentDrawingCache="animation" />
 </LinearLayout>
