--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="font_9">#999999</color>
     <color name="font_blue_5">#528fdb</color>
     <color name="font_lose_c">#cccccc</color>
+    <color name="font_3">#333333</color>
     <!-- 自定义的颜色值end -->
 
 
