--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="font_6">#666666</color>
     <!-- 自定义的颜色值end -->
 
+    <color name="sendfeedback">#B5B4B4</color>
+
 
     <color name="line">#ffd3dde6</color>
     <color name="gray_white">#ebebeb</color>
