--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,15 @@
     <color name="font_lose_c">#cccccc</color>
     <color name="font_3">#333333</color>
     <color name="font_6">#666666</color>
-    <!-- 自定义的颜色值end -->
 
     <color name="sendfeedback">#B5B4B4</color>
+    <color name="home_tab_1">#d0f1c6</color>
+    <color name="home_tab_2">#d5e5f4</color>
+    <color name="home_tab_3">#f2ead5</color>
+    <color name="home_tab_4">#f2d4d4</color>
+    <color name="home_tab_5">#f3efd4</color>
+    <color name="home_tab_6">#f8e6fc</color>
+    <!-- 自定义的颜色值end -->
 
 
     <color name="line">#ffd3dde6</color>
