--- a/app/src/main/res/layout/apply_loan.xml
+++ b/app/src/main/res/layout/apply_loan.xml
@@ -54,6 +54,13 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"/>
 
+    <Spinner
+        android:id="@+id/Spinner01"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:animationCache="true"
+        android:drawSelectorOnTop="true"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
