--- a/app/src/main/res/layout/forget_pwd.xml
+++ b/app/src/main/res/layout/forget_pwd.xml
@@ -161,103 +161,16 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="@color/white"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp">
-
-        <ImageView
-            android:id="@+id/recommend_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon_telephone"
-            android:layout_centerVertical="true"/>
-
-        <EditText
-            android:id="@+id/recommend_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/register_input"
-            android:layout_toRightOf="@id/recommend_icon"
-            android:textColor="@color/font_6"
-            android:textColorHint="@color/font_9"
-            android:hint="@string/recommend_phone"
-            android:paddingLeft="10dp"
-            android:paddingRight="20dp"/>
-
-        <ImageView
-            android:id="@+id/clear_recommend_phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon_off"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"/>
-
-    </RelativeLayout>
-
     <Button
         android:id="@+id/submit_register_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/linzi_button_red"
-        android:text="@string/login_register"
+        android:text="@string/forgetPwd_submit_btn"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="40dp"/>
-
-    <LinearLayout
-        android:id="@+id/xieyi_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        android:paddingLeft="25dp"
-        android:paddingRight="20dp">
-
-        <LinearLayout
-            android:id="@+id/xieyi_layout_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/xieyi_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/icon_choice_h"
-                android:layout_marginRight="2dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="我已阅读并同意"
-                android:layout_marginTop="2dp"
-                android:textSize="16sp"
-                android:textColor="@color/font_9"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/xieyi_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="《耀联投资》"
-            android:layout_marginTop="2dp"
-            android:textSize="16sp"
-            android:textColor="@color/font_blue_5"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="用户协议"
-            android:layout_marginTop="2dp"
-            android:textSize="16sp"
-            android:textColor="@color/font_9"/>
-
-    </LinearLayout>
 
 </LinearLayout>
