--- a/app/src/main/res/layout/user_login.xml
+++ b/app/src/main/res/layout/user_login.xml
@@ -7,12 +7,10 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:background="@color/white"
         android:layout_marginTop="25dp"
-        android:paddingTop="10dp"
         android:paddingLeft="15dp"
-        android:paddingBottom="5dp"
         android:paddingRight="15dp">
 
         <ImageView
@@ -25,13 +23,14 @@
         <EditText
             android:id="@+id/login_phone_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/register_input"
             android:layout_toRightOf="@id/img_reg"
-            android:layout_alignRight="@+id/clear_phone_text"
-            android:layout_marginLeft="5dp"
-            android:textColor="@color/font_9"
+            android:textColor="@color/font_6"
             android:textColorHint="@color/font_9"
-            android:hint="@string/register_phone"/>
+            android:hint="@string/register_phone"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"/>
 
         <ImageView
             android:id="@+id/clear_phone_text"
@@ -45,12 +44,10 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:background="@color/white"
         android:layout_marginTop="25dp"
-        android:paddingTop="10dp"
         android:paddingLeft="15dp"
-        android:paddingBottom="5dp"
         android:paddingRight="15dp">
 
         <ImageView
@@ -63,12 +60,14 @@
         <EditText
             android:id="@+id/login_pwd_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/register_input"
             android:layout_toRightOf="@id/img_code_reg"
-            android:layout_marginLeft="5dp"
-            android:textColor="@color/font_9"
+            android:textColor="@color/font_6"
             android:textColorHint="@color/font_9"
-            android:hint="@string/login_pwd_hint"/>
+            android:hint="@string/login_pwd_hint"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"/>
 
         <ImageView
             android:id="@+id/clear_login_pwd"
