--- a/app/src/main/res/layout/financing_detail.xml
+++ b/app/src/main/res/layout/financing_detail.xml
@@ -318,6 +318,7 @@
                 android:id="@+id/financing_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="300dp"
                 android:orientation="vertical">
             </LinearLayout>
             
