--- a/app/src/main/res/layout/tab_main_company.xml
+++ b/app/src/main/res/layout/tab_main_company.xml
@@ -1,12 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/page_bg">
 
-    <TextView
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginBottom="10dp">
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp">
+
+            <TextView
+                android:id="@+id/company_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/title_bg"
+                android:textSize="14sp"
+                android:text="@string/company_all" />
+
+            <TextView
+                android:id="@+id/company_news"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:textColor="@color/mainTabOff"
+                android:text="@string/company_news" />
+
+            <TextView
+                android:id="@+id/company_dongTai"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:textColor="@color/mainTabOff"
+                android:text="@string/company_dongTai" />
+
+            <TextView
+                android:id="@+id/company_maoYi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:textColor="@color/mainTabOff"
+                android:text="@string/company_maoYi" />
+
+        </TableRow>
+
+    </TableLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/company_pager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="这是公司"/>
+        android:layout_gravity="center"
+        android:layout_weight="1.0"
+        android:flipInterval="30"
+        android:persistentDrawingCache="animation" />
+
 
 </LinearLayout>
