--- a/app/src/main/res/layout/tab_main_user.xml
+++ b/app/src/main/res/layout/tab_main_user.xml
@@ -23,6 +23,7 @@
                 android:layout_centerInParent="true"/>
 
             <TextView
+                android:id="@+id/user_info_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
