--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="font_lose_c">#cccccc</color>
     <color name="font_3">#333333</color>
     <color name="font_6">#666666</color>
+    <color name="font_f63">#ff6633</color>
 
     <color name="sendfeedback">#B5B4B4</color>
     <color name="home_tab_1">#d0f1c6</color>
