--- a/app/src/main/res/layout/advertisement_info.xml
+++ b/app/src/main/res/layout/advertisement_info.xml
@@ -34,11 +34,18 @@
                 android:textSize="14sp"
                 android:gravity="center_horizontal"/>
 
+            <!--<ListView-->
+                <!--android:id="@+id/advertisement_list_view"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:padding="10dp">-->
+            <!--</ListView>-->
+
             <com.pudding.financeandroid.view.MyListView
                 android:id="@+id/advertisement_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:padding="10dp">
             </com.pudding.financeandroid.view.MyListView>
 
         </LinearLayout>
