--- a/app/src/main/res/layout/content_list_item.xml
+++ b/app/src/main/res/layout/content_list_item.xml
@@ -15,9 +15,10 @@
 
     <ImageView
         android:id="@+id/content_item_img"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="centerInside"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         android:visibility="gone"/>
 
 </LinearLayout>
