--- a/app/src/main/res/layout/info_detail.xml
+++ b/app/src/main/res/layout/info_detail.xml
@@ -2,36 +2,55 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="15dp">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/info_detail_title"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/font_3"
-        android:textSize="18sp"
-        android:gravity="center_horizontal"/>
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
-    <TextView
-        android:id="@+id/info_detail_createTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/font_9"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="10dp"/>
-    
-    <ImageView
-        android:id="@+id/info_detail_logo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp">
 
-    <LinearLayout
-        android:id="@+id/info_detail_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-    </LinearLayout>
+            <TextView
+                android:id="@+id/info_detail_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/font_3"
+                android:textSize="18sp"
+                android:gravity="center_horizontal"/>
+
+            <TextView
+                android:id="@+id/info_detail_createTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/font_9"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="10dp"/>
+
+            <ImageView
+                android:id="@+id/info_detail_logo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"/>
+
+            <!--<LinearLayout-->
+                <!--android:id="@+id/info_detail_content"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:orientation="vertical">-->
+            <!--</LinearLayout>-->
+
+            <com.pudding.financeandroid.view.MyListView
+                android:id="@+id/info_detail_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </com.pudding.financeandroid.view.MyListView>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
